--- a/login.html
+++ b/login.html
@@ -1,18 +1,25 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="stylesheet" type="text/css" href="registerstyle.css">
+         <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="log-form">
-  <h2>Login to your account</h2>
-  <form method="POST" action="loginController2.php">
-    <input type="text" title="email" name="email" /><br> <br>
-    <input type="password" title="password" name="password" /> <br> <br>
-    <button type="submit" class="btn">Login</button>
-    <h4> Register here if you do not have an account </h6>
-    <a href="register.html">Register</a>
-  </form>
-</div>
+  <!--There isn't really any code here... it's just a skeleton that
+    calls the login or register functioanlity. -->
+  <div class="top" style="text-align:center">
+    <h1 style="color:whitesmoke">Login to your account</h1>
+  </div>
+
+  <div class="container">
+    <form method="POST" action="loginController2.php">
+      <input type="text" title="email" name="email" placeholder="email" /><br> <br>
+      <input type="password" title="email" name="password" placeholder="password" /> <br> <br>
+      <button type="submit" class="btn">Login</button>
+      <h4> Register here if you do not have an account </h6>
+      <a href="register.html">Register</a>
+    </form>
+  </div>
 </body>
 </html>
+
